hphp/test/zend/bad/ext/standard/tests/password/password_get_info_error.php
<?php
//-=-=-=-
var_dump(password_get_info());
var_dump(password_get_info(array()));

echo "OK!";
?>